fix path problems + cleanup